--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api-tasks",
+  "name": "api-desafio-flowdriver",
   "version": "1.0.0",
   "description": "",
   "main": "./dist/server.js",
